// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render default correctly 1`] = `
<label class="fx-input">
  <!--v-if--><input class="fx-input_input" name="" type="text" inputmode="text" placeholder="" maxlength="140">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</label>
`;

exports[`Input should render prop disabled=true correctly 1`] = `
<label class="fx-input disabled">
  <!--v-if--><input class="fx-input_input" name="" type="text" inputmode="text" disabled="" placeholder="" maxlength="140">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</label>
`;

exports[`Input should render prop maxlength=200 correctly 1`] = `
<label class="fx-input">
  <!--v-if--><input class="fx-input_input" name="" type="text" inputmode="text" placeholder="" maxlength="200">
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</label>
`;

exports[`Input should render prop showClear=true correctly 1`] = `
<label class="fx-input">
  <!--v-if--><input class="fx-input_input" name="" type="text" inputmode="text" placeholder="" maxlength="140">
  <!--v-if-->
  <icon-stub icon="CloseCircleFilled" spin="false" size="0" width="0" height="0" class="fx-input_clear" style="display: none;"></icon-stub>
  <!--v-if-->
</label>
`;
